--- a/Interpretacao_Estatistica_NBA_1996_2016.ipynb
+++ b/Interpretacao_Estatistica_NBA_1996_2016.ipynb
@@ -25,28 +25,73 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uHAs3sJ390ST",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "**CESAR School - Especialização em Análise e Engenharia de Dados**\n",
+        "\n",
+        "**Projeto da Disciplina Introdução à Análise de Dados**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uF-RduFQCYFz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Professor: Luciano Barbosa\n",
+        "\n",
+        "Monitor: Johny Moreira\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XqoFhh06LXGD",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Olá...**\n",
+        "\n",
+        "Neste projeto iremos realizar a leitura de uma base de dados e fazer a interpretação das informações contidas nela através das técnicas de extração de dados aprendidas durante a disciplina de Introdução à Análise de Dados."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hZDqv14InSiA",
         "colab_type": "code",
+        "outputId": "5a45f0a6-4feb-43df-dc1d-d4d51d3c6403",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "98f44192-0637-4d9e-f474-6ad5d2764f03"
+        }
       },
       "source": [
-        "# Imports biblioteca Pandas\n",
+        "# Imports das bibliotecas para utilização do Pandas\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
-        "# Conexão com repositório da base de dados\n",
+        "# Conexão com repositório da base de dados no projeto\n",
         "dataset=pd.read_csv(\"https://raw.githubusercontent.com/cristianosps/Introducao_Ciencia_de_Dados/master/all_seasons1.csv\")\n",
         "\n",
         "# Apresentação dos dados do repositório\n",
         "dataset.head()\n"
       ],
-      "execution_count": 12,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +283,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 43
         }
       ]
     },
@@ -247,16 +292,16 @@
       "metadata": {
         "id": "0Kv3Pf3C7M0v",
         "colab_type": "code",
+        "outputId": "1da4cbca-28b4-4c68-9a02-710922bc0135",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
-        },
-        "outputId": "258b1ca9-1477-4562-b76e-0f4000f9e14d"
+        }
       },
       "source": [
         "dataset.dtypes"
       ],
-      "execution_count": 13,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +335,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 44
         }
       ]
     },
@@ -317,16 +362,16 @@
       "metadata": {
         "id": "sHk-6PGo_O4g",
         "colab_type": "code",
+        "outputId": "8b81e484-110e-4395-8a2c-80d9c65c6863",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
-        },
-        "outputId": "68ffcff4-6b5e-4b51-cba7-3b2d43a0bb09"
+        }
       },
       "source": [
         "dataset.dtypes"
       ],
-      "execution_count": 15,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +405,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 46
         }
       ]
     },
@@ -369,16 +414,16 @@
       "metadata": {
         "id": "HsXHT7Fg_e06",
         "colab_type": "code",
+        "outputId": "71dec886-9eb4-472a-a779-7dcefc2faf33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "03e40364-7500-45f0-83b2-4d5d01837807"
+        }
       },
       "source": [
         "dataset['team_abbreviation'].cat.categories"
       ],
-      "execution_count": 18,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +439,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 47
         }
       ]
     },
@@ -403,16 +448,16 @@
       "metadata": {
         "id": "uMLGUoz_CQ1i",
         "colab_type": "code",
+        "outputId": "09fbcb6a-72f6-44db-d34e-715fd3ef34a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        },
-        "outputId": "6dc4c6cb-158c-43dc-e9d9-23cd7f77721b"
+        }
       },
       "source": [
         "dataset['college'].cat.categories\n"
       ],
-      "execution_count": 20,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +476,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 48
         }
       ]
     },
@@ -440,16 +485,16 @@
       "metadata": {
         "id": "lbV5ffJiCzXh",
         "colab_type": "code",
+        "outputId": "06e74239-0a01-46fd-9bbf-8414740b57cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
-        },
-        "outputId": "d93fa36f-f4ce-438b-a12a-76144f7b965d"
+        }
       },
       "source": [
         "dataset['country'].cat.categories"
       ],
-      "execution_count": 21,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +520,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 49
         }
       ]
     },
@@ -484,16 +529,16 @@
       "metadata": {
         "id": "GeaxS3MmDADc",
         "colab_type": "code",
+        "outputId": "921bc024-4040-4264-d744-00dbb926ef71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "ff13cda0-b468-43a1-f324-4151b51fa9e5"
+        }
       },
       "source": [
         "dataset['draft_year'].cat.categories"
       ],
-      "execution_count": 22,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +555,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 50
         }
       ]
     },
@@ -519,16 +564,16 @@
       "metadata": {
         "id": "AFtkRkN0DP-5",
         "colab_type": "code",
+        "outputId": "603f7300-5744-47cc-a843-acf2d067d42c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "d2a291a4-78e4-47ed-f436-9fe035dd1420"
+        }
       },
       "source": [
         "dataset['season'].cat.categories"
       ],
-      "execution_count": 24,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +589,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 51
         }
       ]
     },
@@ -553,16 +598,16 @@
       "metadata": {
         "id": "NtevuI6cFF2b",
         "colab_type": "code",
+        "outputId": "32846557-63e9-4123-984c-f77314c84145",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "252b7544-bf7d-4cfd-9ef5-b2d6114c8746"
+        }
       },
       "source": [
         "dataset.head()"
       ],
-      "execution_count": 28,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +799,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 52
         }
       ]
     },
@@ -763,16 +808,16 @@
       "metadata": {
         "id": "AqqvbL27EJbV",
         "colab_type": "code",
+        "outputId": "c4f7ca3f-7581-47c3-e4ea-0f806aa4d444",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d174432d-7311-41b2-8960-5683f01f19ef"
+        }
       },
       "source": [
         "dataset.shape"
       ],
-      "execution_count": 29,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +829,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 53
         }
       ]
     },
@@ -793,16 +838,16 @@
       "metadata": {
         "id": "7pWm-8quFSet",
         "colab_type": "code",
+        "outputId": "5efc5e49-707b-4d05-b6cd-21495f07efc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
-        },
-        "outputId": "d4e75d81-c1fe-43a4-fd0b-89975f214e0b"
+        }
       },
       "source": [
         "print(dataset.isnull().sum())"
       ],
-      "execution_count": 31,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,17 +885,17 @@
       "metadata": {
         "id": "P6QYBQeFFqZR",
         "colab_type": "code",
+        "outputId": "22aefa73-ac26-4e6b-dfcd-3d5ab66b2a9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "72ded860-571d-43d6-f22d-a032c649803a"
+        }
       },
       "source": [
         "dataset1 = dataset.dropna()\n",
         "dataset1.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1042,7 +1087,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 55
         }
       ]
     },
@@ -1051,16 +1096,16 @@
       "metadata": {
         "id": "jrCYRuHPGIhi",
         "colab_type": "code",
+        "outputId": "2b758a8b-3418-40df-ca43-9e6bcd6d0a73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9ca74f02-fec2-4305-d9f9-ff5333b699c8"
+        }
       },
       "source": [
         "len(dataset1)"
       ],
-      "execution_count": 33,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1072,7 +1117,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 56
         }
       ]
     }
