--- a/Interpretacao_Estatistica_NBA_1996_2016.ipynb
+++ b/Interpretacao_Estatistica_NBA_1996_2016.ipynb
@@ -35,10 +35,9 @@
         "\n",
         "---\n",
         "\n",
+        "#**CESAR School - Especialização em Análise e Engenharia de Dados**\n",
         "\n",
-        "**CESAR School - Especialização em Análise e Engenharia de Dados**\n",
-        "\n",
-        "**Projeto da Disciplina Introdução à Análise de Dados**"
+        "###**Projeto da Disciplina Introdução à Análise de Dados**\n"
       ]
     },
     {
@@ -48,9 +47,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Professor: Luciano Barbosa\n",
-        "\n",
-        "Monitor: Johny Moreira\n",
+        "###Professor: Luciano Barbosa\n",
+        "###Monitor: Johny Moreira\n",
         "\n",
         "\n",
         "---\n",
