--- a/Interpretacao_Estatistica_NBA_1996_2016.ipynb
+++ b/Interpretacao_Estatistica_NBA_1996_2016.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "#**CESAR School - Especialização em Análise e Engenharia de Dados**\n",
         "\n",
-        "###**Projeto da Disciplina Introdução à Análise de Dados**\n"
+        "###**Projeto de Avaliação para Disciplina \"Introdução à Análise de Dados\"**\n"
       ]
     },
     {
@@ -64,7 +64,21 @@
       "source": [
         "##**Olá...**\n",
         "\n",
-        "Neste projeto iremos realizar a leitura de uma base de dados e fazer a interpretação das informações contidas nela através das técnicas de extração de dados aprendidas durante a disciplina de Introdução à Análise de Dados."
+        "Neste projeto iremos realizar a leitura de uma base de dados e fazer a interpretação das informações através das técnicas de extração de dados apresentadas durante a disciplina de \"Introdução à Análise de Dados\".\n",
+        "\n",
+        ".\n",
+        "\n",
+        "Nesta base de dados estão contidas informações relecionadas a estatística e aproveitamento de cada jogador da NBA, para cada temporada que disputou entre os anos de 1996 e 2018. \n",
+        "\n",
+        "Por este conjunto de dados podemos obter de cada jogador que passou pela NBA (entre os anos de 1996 e 2018) informações pessoais (Idade, País de origem, Faculdade...), porte físico (Altura, peso...), Times/ Franquias e seu aproveitamento para cada temporada que disputou da liga.\n",
+        "\n",
+        ".\n",
+        "\n",
+        "PS: Na descrição da base de dados em sua origem, conforme fonte abaixo, diz que as informações são referentes as temporadas entre os anos de 1996 e 2016, porém ao começar a explorar algumas informações categorizadas (\"draft_year\", \"sesion\") foi verificado que a base sofreu atualização e agora contempla dados de cada jogador até a temporada 2017-2018 da NBA.\n",
+        "\n",
+        ".\n",
+        "\n",
+        "(Fonte: https://www.kaggle.com/justinas/nba-players-data#all_seasons.csv)"
       ]
     },
     {
@@ -72,7 +86,7 @@
       "metadata": {
         "id": "hZDqv14InSiA",
         "colab_type": "code",
-        "outputId": "5a45f0a6-4feb-43df-dc1d-d4d51d3c6403",
+        "outputId": "f1f32e31-bac3-4a9c-e5cd-8b8f4f9aa878",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -86,10 +100,10 @@
         "# Conexão com repositório da base de dados no projeto\n",
         "dataset=pd.read_csv(\"https://raw.githubusercontent.com/cristianosps/Introducao_Ciencia_de_Dados/master/all_seasons1.csv\")\n",
         "\n",
-        "# Apresentação dos dados do repositório\n",
+        "# Apresentação dos dados \"brutos\" do repositório\n",
         "dataset.head()\n"
       ],
-      "execution_count": 43,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +295,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 72
         }
       ]
     },
@@ -290,16 +304,18 @@
       "metadata": {
         "id": "0Kv3Pf3C7M0v",
         "colab_type": "code",
-        "outputId": "1da4cbca-28b4-4c68-9a02-710922bc0135",
+        "outputId": "412d2ced-4b88-4d47-9cef-b5aec98db7b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
         }
       },
       "source": [
+        "# Apresentação dos tipos de dados iniciais para cada coluna da base de dados\n",
+        "\n",
         "dataset.dtypes"
       ],
-      "execution_count": 44,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +349,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 73
         }
       ]
     },
@@ -345,7 +361,8 @@
         "colab": {}
       },
       "source": [
-        "# Criando categorias de dados\n",
+        "# Criação categorias de dados para base\n",
+        "\n",
         "dataset['team_abbreviation'] = dataset['team_abbreviation'].astype('category')\n",
         "dataset['college'] = dataset['college'].astype('category')\n",
         "dataset['country'] = dataset['country'].astype('category')\n",
@@ -360,16 +377,19 @@
       "metadata": {
         "id": "sHk-6PGo_O4g",
         "colab_type": "code",
-        "outputId": "8b81e484-110e-4395-8a2c-80d9c65c6863",
+        "outputId": "0bef1a61-d9c3-4871-cd9b-414c542fd950",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
         }
       },
       "source": [
+        "# Apresentação das categorias de dados criadas para base \n",
+        "# (team_abbreviation | college | country | draft_year | season)\n",
+        "\n",
         "dataset.dtypes"
       ],
-      "execution_count": 46,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +423,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 86
         }
       ]
     },
@@ -412,16 +432,18 @@
       "metadata": {
         "id": "HsXHT7Fg_e06",
         "colab_type": "code",
-        "outputId": "71dec886-9eb4-472a-a779-7dcefc2faf33",
+        "outputId": "f089138d-1ce3-4847-d45c-0efe96344905",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
         }
       },
       "source": [
+        "# Apresetação do valores contidos na categoria \"team_abbreviation\"\n",
+        "\n",
         "dataset['team_abbreviation'].cat.categories"
       ],
-      "execution_count": 47,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +459,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 77
         }
       ]
     },
@@ -446,16 +468,18 @@
       "metadata": {
         "id": "uMLGUoz_CQ1i",
         "colab_type": "code",
-        "outputId": "09fbcb6a-72f6-44db-d34e-715fd3ef34a7",
+        "outputId": "10afed8d-4e12-404d-d580-1959e729ebbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
         }
       },
       "source": [
-        "dataset['college'].cat.categories\n"
+        "# Apresetação do valores contidos na categoria \"college\"\n",
+        "\n",
+        "dataset['college'].cat.categories"
       ],
-      "execution_count": 48,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +498,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 78
         }
       ]
     },
@@ -483,16 +507,18 @@
       "metadata": {
         "id": "lbV5ffJiCzXh",
         "colab_type": "code",
-        "outputId": "06e74239-0a01-46fd-9bbf-8414740b57cd",
+        "outputId": "0bd3f476-c408-409a-e581-beaea3c7cf28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
         }
       },
       "source": [
+        "# Apresetação do valores contidos na categoria \"country\"\n",
+        "\n",
         "dataset['country'].cat.categories"
       ],
-      "execution_count": 49,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +544,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 79
         }
       ]
     },
@@ -527,16 +553,18 @@
       "metadata": {
         "id": "GeaxS3MmDADc",
         "colab_type": "code",
-        "outputId": "921bc024-4040-4264-d744-00dbb926ef71",
+        "outputId": "13b06ee6-cff9-479c-b0b9-45a5a33839d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
         }
       },
       "source": [
+        "# Apresetação do valores contidos na categoria \"draft_year\"\n",
+        "\n",
         "dataset['draft_year'].cat.categories"
       ],
-      "execution_count": 50,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,7 +581,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 87
         }
       ]
     },
@@ -562,16 +590,18 @@
       "metadata": {
         "id": "AFtkRkN0DP-5",
         "colab_type": "code",
-        "outputId": "603f7300-5744-47cc-a843-acf2d067d42c",
+        "outputId": "fc1cabbc-3755-421c-a729-d96a91e481d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
         }
       },
       "source": [
+        "# Apresetação do valores contidos na categoria \"season\"\n",
+        "\n",
         "dataset['season'].cat.categories"
       ],
-      "execution_count": 51,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +617,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 88
         }
       ]
     },
@@ -596,7 +626,7 @@
       "metadata": {
         "id": "NtevuI6cFF2b",
         "colab_type": "code",
-        "outputId": "32846557-63e9-4123-984c-f77314c84145",
+        "outputId": "37051884-5db8-4f28-b344-d08369703957",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -605,7 +635,7 @@
       "source": [
         "dataset.head()"
       ],
-      "execution_count": 52,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +827,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 82
         }
       ]
     },
@@ -806,7 +836,7 @@
       "metadata": {
         "id": "AqqvbL27EJbV",
         "colab_type": "code",
-        "outputId": "c4f7ca3f-7581-47c3-e4ea-0f806aa4d444",
+        "outputId": "422e046b-d16c-443e-c570-c0353236e1ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -815,7 +845,7 @@
       "source": [
         "dataset.shape"
       ],
-      "execution_count": 53,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,7 +857,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 83
         }
       ]
     },
@@ -836,7 +866,7 @@
       "metadata": {
         "id": "7pWm-8quFSet",
         "colab_type": "code",
-        "outputId": "5efc5e49-707b-4d05-b6cd-21495f07efc5",
+        "outputId": "79817ac8-af09-4c95-dc41-22bca4a428dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
@@ -845,7 +875,7 @@
       "source": [
         "print(dataset.isnull().sum())"
       ],
-      "execution_count": 54,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +913,7 @@
       "metadata": {
         "id": "P6QYBQeFFqZR",
         "colab_type": "code",
-        "outputId": "22aefa73-ac26-4e6b-dfcd-3d5ab66b2a9b",
+        "outputId": "46cf2b69-79ef-4ded-ffed-c3ea98295efa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -893,7 +923,7 @@
         "dataset1 = dataset.dropna()\n",
         "dataset1.head()"
       ],
-      "execution_count": 55,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,7 +1115,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 84
         }
       ]
     },
@@ -1094,30 +1124,13 @@
       "metadata": {
         "id": "jrCYRuHPGIhi",
         "colab_type": "code",
-        "outputId": "2b758a8b-3418-40df-ca43-9e6bcd6d0a73",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "len(dataset1)"
       ],
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "10101"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 56
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
